--- a/classRERR_1_1Exception.html
+++ b/classRERR_1_1Exception.html
@@ -80,13 +80,9 @@ $(function() {
 <div class="dynheader">
 Inheritance diagram for Exception:</div>
 <div class="dyncontent">
-<div class="center"><img src="classRERR_1_1Exception__inherit__graph.png" border="0" usemap="#Exception_inherit__map" alt="Inheritance graph"/></div>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
-<div class="dynheader">
-Collaboration diagram for Exception:</div>
-<div class="dyncontent">
-<div class="center"><img src="classRERR_1_1Exception__coll__graph.png" border="0" usemap="#Exception_coll__map" alt="Collaboration graph"/></div>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+ <div class="center">
+  <img src="classRERR_1_1Exception.png" alt=""/>
+ </div></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
